# learning-cpp

./: Dockerfile  README.md
code-examples/W1-intro/: CMakeLists.txt
code-examples/W1-intro/src/: hello-world.cpp
code-examples/W2-basics/: CMakeLists.txt
code-examples/W2-basics/include/: my_cool_library.hpp  my_old_cool_library.hpp
code-examples/W2-basics/src/: functions.cpp  namespaces_and_scope.cpp  preprocessor.cpp  types.cpp
code-examples/W2-basics/src/apps/: functions.cpp  my_cool_executable.cpp  preprocessor.cpp  types.cpp
code-examples/W2-basics/src/lib/: my_cool_library.cpp
code-examples/W3-operators-control-flow-bit-manipulation/: CMakeLists.txt
code-examples/W3-operators-control-flow-bit-manipulation/src/: bit_manipulation.cpp  control_flow.cpp  operators.cpp
code-examples/W4-advanced-type-concepts/: CMakeLists.txt
code-examples/W4-advanced-type-concepts/src/: const_and_constexpr.cpp  conversion.cpp  type_deduction.cpp  typedefs_and_aliases.cpp
code-examples/W5-generic-programming-and-overloads/: CMakeLists.txt
code-examples/W5-generic-programming-and-overloads/include/: forward_declared_templates.hpp  templates.hpp
code-examples/W5-generic-programming-and-overloads/src/apps/: forward_declared_templates_main.cpp  function_overloading.cpp  operator_overloading.cpp  templates.cpp
code-examples/W5-generic-programming-and-overloads/src/lib/: forward_declared_templates.cpp
docker/: build  run
